Finished namespace feature
* Namespaces cli command
* Users are created under "/users"
* Secrets are created under "/secrets"
